--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
-    "expo": "~53.0.13",
-    "expo-av": "^15.1.6",
+    "expo": "53.0.20",
+    "expo-av": "~15.1.7",
     "expo-blur": "^14.1.5",
     "expo-file-system": "^18.1.10",
     "expo-haptics": "~14.1.4",
@@ -25,12 +25,12 @@
     "expo-media-library": "~17.1.7",
     "expo-permissions": "^14.4.0",
     "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "^5.0.9",
+    "expo-system-ui": "~5.0.10",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.4",
-    "react-native-gesture-handler": "^2.26.0",
-    "react-native-safe-area-context": "^5.5.0",
+    "react-native": "0.79.5",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.11.1",
     "react-native-web": "^0.20.0"
   },
