Add amazing feature

--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
     "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/slider": "^4.5.6",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
+    "date-fns": "^4.1.0",
     "expo": "53.0.20",
     "expo-av": "~15.1.7",
-    "expo-blur": "^14.1.5",
+    "expo-blur": "~14.1.5",
     "expo-file-system": "^18.1.10",
     "expo-haptics": "~14.1.4",
     "expo-image-picker": "^16.1.4",
-    "expo-linear-gradient": "^14.1.5",
+    "expo-linear-gradient": "~14.1.5",
     "expo-media-library": "~17.1.7",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.10",
